# aws-database-encryption-sdk-dynamodb

./: .gitignore  .gitmodules  .prettierignore  .releaserc-java.cjs  .releaserc-net.cjs  .releaserc.cjs  CHANGELOG-java.md  CHANGELOG-net.md  CHANGELOG-rust.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SUPPORT_POLICY.rst  SharedMakefile.mk  allclasses-frame.html  allclasses-noframe.html  build.gradle.kts  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  project.properties  running_test_vector.json  serialized-form.html  session.json  settings.gradle.kts
DynamoDbEncryption/runtimes/python/: .readthedocs.yaml  README.md  pyproject.toml  tox.ini
DynamoDbEncryption/runtimes/python/docs/: conf.py  index.rst
DynamoDbEncryption/runtimes/python/src/aws_database_encryption_sdk/: __init__.py  transform.py
DynamoDbEncryption/runtimes/python/src/aws_dbesdk_dynamodb/: __init__.py  transform.py
DynamoDbEncryption/runtimes/python/test/: constants.py  ddb_formatted_requests.py  dict_formatted_requests.py  items.py  requests.py  responses.py
DynamoDbEncryption/runtimes/python/test/integ/: constants.py
DynamoDbEncryption/runtimes/python/test/internaldafny/: test_dafny_wrapper.py
DynamoDbEncryption/runtimes/rust/: .gitignore  Cargo.toml  README.md  RELEASE.md  build.sh  copy_externs.sh  extra_ddb.txt  extra_impl.txt  extra_kms.txt  repair_build.sh  start_release.sh  test_published.sh  upgrade_examples.sh
DynamoDbEncryption/runtimes/rust/dafny_impl/src/: UTF8.rs  _externs.rs  lib.rs
DynamoDbEncryption/runtimes/rust/dafny_runtime_rust/src/: lib.rs
DynamoDbEncryption/runtimes/rust/examples/: basic_async.rs  basic_get_put_example.rs  create_keystore_key.rs  create_keystore_table.rs  main.rs  multi_get_put_example.rs  test_utils.rs
DynamoDbEncryption/runtimes/rust/examples/clientsupplier/: client_supplier_example.rs  mod.rs  regional_role_client_supplier.rs  regional_role_client_supplier_config.rs
DynamoDbEncryption/runtimes/rust/examples/itemencryptor/: item_encrypt_decrypt.rs
DynamoDbEncryption/runtimes/rust/examples/keyring/: branch_key_id_supplier.rs  hierarchical_keyring.rs  kms_rsa_keyring.rs  mod.rs  mrk_discovery_multi_keyring.rs  multi_keyring.rs  multi_mrk_keyring.rs  raw_aes_keyring.rs  raw_rsa_keyring.rs
DynamoDbEncryption/runtimes/rust/examples/migration/: mod.rs
DynamoDbEncryption/runtimes/rust/examples/searchableencryption/: basic_searchable_encryption.rs  beacon_styles_searchable_encryption.rs  compound_beacon_searchable_encryption.rs  mod.rs  virtual_beacon_searchable_encryption.rs
DynamoDbEncryption/runtimes/rust/src/: README.md  concurrent_call.rs  dafny_libraries.rs  ddb.rs  ecdh.rs  externs_utf8.rs  hmac.rs  intercept.rs  kms.rs  lib.rs  main.rs  rsa.rs  software_externs.rs  time.rs
DynamoDbEncryption/runtimes/rust/test_examples/: .gitignore  Cargo.toml
Examples/runtimes/python/: pyproject.toml  tox.ini
Examples/runtimes/python/DynamoDBEncryption/: .gitignore
Examples/runtimes/python/DynamoDBEncryption/src/: basic_put_get_example.py  create_keystore_key_example.py  create_keystore_table_example.py  encrypted_client.py  encrypted_paginator.py  get_encrypted_data_key_description_example.py  interceptor.py  item_encryptor.py  poc_example.py  scan_error_example.py  table.py
Examples/runtimes/python/DynamoDBEncryption/test/: cleanup.py  encrypted_client.py  encrypted_paginator.py  test_create_keystore_key_example.py  test_create_keystore_table_example.py  test_encrypted_paginator.py  test_get_encrypted_data_key_description_example.py  test_scan_error_example.py  test_utils.py
Examples/runtimes/python/Migration/: README.md
Examples/runtimes/python/Migration/plaintext_to_aws_dbesdk_dynamodb/: migration_example_step_1.py
TestVectors/runtimes/python/: .gitignore  README.md  WriteTests1.json  encrypt.json  iotest.json  pyproject.toml  recursion.txt  tox.ini
TestVectors/runtimes/python/src/aws_dbesdk_dynamodb_test_vectors/: __init__.py  waiting_boto3_ddb_client.py
TestVectors/runtimes/python/test/: resource_formatted_queries.py
TestVectors/runtimes/python/test/client/: test_dafny_wrapper.py
TestVectors/runtimes/python/test/resource/: test_dafny_wrapper.py
TestVectors/runtimes/python/test/table/: test_dafny_wrapper.py
TestVectors/runtimes/rust/: .gitignore  Cargo.toml  SkipLocal.txt  copy_externs.sh
TestVectors/runtimes/rust/src/: create_client.rs  create_wrapped_item_encryptor.rs  intercept.rs  lib.rs
db-esdk-performance-testing/benchmarks/python/: COMPREHENSIVE_PROFILING_GUIDE.md  README.md  profile_comprehensive.py  pyproject.toml  run_benchmark.py  tox.ini
db-esdk-performance-testing/benchmarks/python/resources/: single_attribute.json
db-esdk-performance-testing/benchmarks/python/src/: test_constants.py
db-esdk-performance-testing/benchmarks/python/src/esdk_benchmark/: __init__.py  __main__.py  benchmark.py  models.py  program.py  tests.py
db-esdk-performance-testing/benchmarks/python/src/providers/: v3_providers.py  (+1 more)
db-esdk-performance-testing/benchmarks/python/tests/: __init__.py  test_benchmark.py
db-esdk-performance-testing/benchmarks/rust/: Cargo.toml  README.md
db-esdk-performance-testing/benchmarks/rust/src/: alloc.rs  benchmark.rs  config.rs  main.rs  results.rs  tests.rs
releases/rust/db_esdk/: Cargo.toml  README.md
releases/rust/db_esdk/dafny_runtime_rust/: Cargo.toml  README.md
releases/rust/db_esdk/examples/: README.md  basic_get_put_example.rs  create_keystore_key.rs  get_encrypted_data_key_description.rs  main.rs  multi_get_put_example.rs
releases/rust/db_esdk/src/: aes_gcm.rs  aes_kdf_ctr.rs  client.rs  concurrent_call.rs  conversions.rs  dafny_libraries.rs  ddb.rs  deps.rs  digest.rs  ecdh.rs  ecdsa.rs  escape.rs  hmac.rs  intercept.rs  kms.rs  lib.rs  local_cmc.rs  operation.rs  oslang.rs  random.rs  rsa.rs  sets.rs  software_externs.rs  standard_library_conversions.rs  standard_library_externs.rs  storm_tracker.rs  time.rs  types.rs  uuid.rs  validation.rs  wrapped.rs
(+6081 files in other folders)
