[tool.poetry]
name = "aws-dbesdk-dynamodb-examples"
version = "0.1.0"
description = ""
authors = ["AWS Crypto Tools <aws-crypto-tools@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.11.0"
aws-dbesdk-dynamodb = { path = "../../../DynamoDbEncryption/runtimes/python", develop = false}

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
tox = "^3"

[build-system]
requires = ["poetry-core<2.0.0"]
build-backend = "poetry.core.masonry.api"
