[package]
name = "dbesdk-benchmark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dbesdk-benchmark"
path = "src/main.rs"

[dependencies]
# AWS SDK and DynamoDB Encryption SDK
aws-db-esdk = { path = "../../../DynamoDbEncryption/runtimes/rust" }

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI and progress
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18"

# Statistics and benchmarking
hdrhistogram = "7.5"
rand = "0.9"

# System info
sysinfo = "0.37"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Memory profiling
memory-stats = "1.2"
stats_alloc = "0.1"

# Async utilities
futures = "0.3"

aws-config = "1.8.12"
aws-sdk-dynamodb = "1.103.0"
aws-sdk-kms = "1.98.0"
aws-sdk-sso = "1.92.0"
aws-sdk-ssooidc = "1.94.0"
aws-sdk-sts = "1.96.0"
aws-smithy-types = "1.3"
cpu-time = "1.0.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
