[package]
name = "aws-db-esdk"
version = "1.2.1"
edition = "2021"
rust-version = "1.88.0"
keywords = ["cryptography", "security", "dynamodb", "encryption", "client-side"]
license = "ISC AND (Apache-2.0 OR ISC)"
description = "aws-db-esdk is a library for implementing client side encryption with DynamoDB."
homepage = "https://github.com/aws/aws-database-encryption-sdk-dynamodb/tree/main/releases/rust/db_esdk"
repository = "https://github.com/aws/aws-database-encryption-sdk-dynamodb/tree/main/releases/rust/db_esdk"
authors = ["AWS-CryptoTools"]
documentation = "https://docs.rs/crate/aws-db-esdk"
autoexamples = false
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.8.10"
aws-lc-rs = {version = "1.15.0"}
aws-lc-sys = { version = "0.33", optional = true }
aws-lc-fips-sys = { version = "0.13", optional = true }
aws-sdk-dynamodb = "1.99.0"
aws-sdk-kms = "1.94.0"
aws-smithy-runtime-api = {version = "1.9.2", features = ["client"] }
aws-smithy-types = "1.3.4"
chrono = "0.4.42"
cpu-time = "1.0.0"
dashmap = "6.1.0"
pem = "3.0.6"
tokio = {version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
dafny-runtime = { version = "0.3.1", features = ["sync", "small-int"] }

[[example]]
name = "main"

[features]
fips = ["aws-lc-rs/fips", "dep:aws-lc-fips-sys"]
non-fips = ["aws-lc-rs/aws-lc-sys", "dep:aws-lc-sys"]
default = ["non-fips"]
